Añade cambios vale a intro

--- a/escrito/urge10.tex
+++ b/escrito/urge10.tex
@@ -59,7 +59,7 @@
 
 % Restrictive rules in the Chilean Cámara: Fighting floor amendments with urgency authority
 
-\title{Presidents on the fast track: Fighting floor amendments in the Chilean Cámara\thanks{An earlier version was read at the 2017 annual meeting of the American Political Science Association, San Francisco, CA. The authors are grateful to Roberto Bustos, Alvaro Villarroel, and the staff of the Senate's Hacienda committee, and especially to Sebastián Soto Velasco for help understanding urgency authority; to Deputy Patricio Vallespín for making the calls that scheduled interviews with key congressional personnel; to Mónica Arretche, Ernesto Calvo, José Antonio Cheibub, Federico Estévez, Adrián Lucardi, and Michelle Taylor-Robinson for comments and critiques. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. Valeria Palanza acknowledges support from Proyecto Fondecyt No. 1140974, and from the Millennium Nucleus for the Study of Stateness and Democracy in Latin America, Project \#NS100014. Gisela Sin acknowledges the support of Office of the Vice Chancellor for Research and the Center for Latin American Studies, University of Illinois at Urbana-Champaign. The authors are responsible for mistakes and shortcomings in the study.}}
+\title{Presidents on the fast track: Fighting floor amendments in the Chilean Cámara\thanks{An earlier version was presented at the 2017 annual meeting of the American Political Science Association, San Francisco, CA. The authors are grateful to Roberto Bustos, Alvaro Villarroel, and the staff of the Senate's Hacienda Committee, and especially to Sebastián Soto Velasco for help understanding urgency authority; to Deputy Patricio Vallespín for making the calls that scheduled interviews with key congressional personnel; to Mónica Arretche, Ernesto Calvo, José Antonio Cheibub, Federico Estévez, Adrián Lucardi, and Michelle Taylor-Robinson for comments and critiques. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. Valeria Palanza acknowledges support from Proyecto Fondecyt No. 1140974, and from the Millennium Nucleus for the Study of Stateness and Democracy in Latin America, Project \#NS100014. Gisela Sin acknowledges the support of Office of the Vice Chancellor for Research and the Center for Latin American Studies, University of Illinois at Urbana-Champaign. The authors are responsible for mistakes and shortcomings in the study.}}
 \author{Eric Magar \\ ITAM \and
         Valeria Palanza \\ Univ.\ Católica de Chile \and  
         Gisela Sin \\ Univ.\ of Illinois, Urbana-Champaign 
