Añade cambios vale a secc 1 y 2

--- a/gesValeriaEric/paper/urge11.tex
+++ b/gesValeriaEric/paper/urge11.tex
@@ -236,7 +236,7 @@ The paper proceeds as follows. Section 2 describes the urgency process in Chile 
 
 \section{Fast-Track Legislation}
 
-As part of a literature that highlights the extraordinary legislative influence of presidents in Latin America, emphasis has been placed on the Chilean president's exclusive proposal rights for certain bills, her capacity to veto bills totally and partially, and to propose amendments at different stages of the legislative process \citep{baldez.carey.1999,aleman.navia.UrgChi.2009}. Less attention has been devoted to the influence granted the president when she can declare certain bills urgent and by doing so, affect how congress deals with its agenda. We view this influence as stemming from the prerogative to qualify bills "urgent", which imposes a form of closed rule for floor consideration, more than, as the current literature sees it, a bill accelerator or a signal of presidential priority. Our argument here joins a growing literature on restrictive rules in legislatures worldwide.\footnote{See \citet{dion.huber.1996,doring.restrictiveRules.2003,huber.1996a,krehbielRestrictiveRules1997,heller.2001,weingast.1992,schickler.richRules1997,cox.mccubbins.1997,amorim.cox.mccubbins.2003,calvo.2014argBook,sin.2014,denhartog.2004phd}, among others.} 
+As part of a literature that highlights the extraordinary legislative influence of presidents in Latin America, emphasis has been placed on the Chilean president's exclusive proposal rights for certain bills, her capacity to veto bills totally and partially, and to propose amendments at different stages of the legislative process \citep{baldez.carey.1999,aleman.navia.UrgChi.2009}. Less attention has been devoted to the influence granted the president when she can declare certain bills urgent and by doing so, affect how congress deals with its agenda. We view this influence as stemming from the prerogative to qualify bills ``urgent'', which imposes a form of closed rule for floor consideration, more than, as the current literature sees it, a bill accelerator or a signal of presidential priority. Our argument here joins a growing literature on restrictive rules in legislatures worldwide.\footnote{See \citet{dion.huber.1996,doring.restrictiveRules.2003,huber.1996a,krehbielRestrictiveRules1997,heller.2001,weingast.1992,schickler.richRules1997,cox.mccubbins.1997,amorim.cox.mccubbins.2003,calvo.2014argBook,sin.2014,denhartog.2004phd}, among others.} 
 \vp{If this footnote is the relevant literature, it would not hurt to summarize findings in 2-3 paragraphs}
 
 \begin{table}
@@ -335,13 +335,13 @@ A simple example of a bill and two amendments illustrates how urgency qualificat
     \end{tikzpicture}  \\
 \end{sidewaysfigure}
 
-We use the example to stylize the evolution of legislative proposals from introduction to passage, in order to illustrate how urgencies affect bills. We introduce some notation. The three-article project is $p$, and $q$ is the status quo (where students and teachers get \$0 from this particular subsidy). Sub-indexes distinguish versions of $p$ with articles amended: $p_1$ has article 1 amended, $p_2$ has article 2 amended, and $p_{1,2}$ has both articles amended. Negotiation proceeds in four steps, schematized in Figure \ref{f:agendaUrg} as per \citet[]{schwartz.2008}.\footnote{See the Cámara's standing rules (\emph{Reglamento}), especially arts.\ 118--189.} 
+We use the example to stylize the evolution of legislative proposals from introduction to passage, in order to illustrate how urgencies affect bills. We introduce some notation. The three-article project is $p$, and $q$ is the status quo (where students and teachers get \$0 from this particular subsidy). Sub-indexes distinguish versions of $p$ with articles amended: $p_1$ has article 1 amended, $p_2$ has article 2 amended, and $p_{12}$ has both articles amended. Negotiation proceeds in four steps, schematized in Figure \ref{f:agendaUrg} as per \citet[]{schwartz.2008}.\footnote{See the Cámara's standing rules (\emph{Reglamento}), especially arts.\ 118--189.} 
 
 \begin{enumerate}
-\item The question of $p_1$'s admissibility into the \textbf{first report} starts it all. The choice is by the chamber's presiding officer, who has final authority to overturn the committee chair's decision. Admitting $p_1$ gives way to a course of play that substantially complicates down the tree. 
+\item The question of amendment $p_1$'s admissibility into the \textbf{first report} starts it all. The choice is by the chamber's presiding officer, who has final authority to overturn the committee chair's decision. Admitting $p_1$ gives way to a course of play that substantially complicates down the tree. 
 \item The bill's \textbf{first plenary reading} follows (\emph{discusión general}). The question here is whether the full proposal should be admitted for consideration or not. If not, the legislative process ends and the status quo prevails: $p$ v. $q$. Next, a vote to admit any amendments that have been proposed follows. Project $p_1$ (amendment admitted) or $p$ (not) is immediately referred back to committee for a second report. 
-\item If the committee concurs, then the \textbf{second report} is the outcome of the first reading. But this is an opportunity for committee members or by legislators external to the committee (with one-third plenary backing) to offer new amendments. The committee chair and the presiding officer can fail to admit these amendments too. For the sake of simplicity, the choice here concerns only article 2, although an array of possibilities exist ---more re-definitions, more articles, fewer, among others. When amended, the second report is $p_2$ or $p_{12}$, depending on whether the outcome of the first reading was $p$ or $p_1$. 
-\item The \textbf{second reading} proceeds one article at a time (\emph{discusión particular}). Importantly, this excludes the subset of articles that were not amended/added/removed in previous steps. This subset (which may include every article if none were amended) is considered adopted with no plenary vote. Rejecting article 1's amendment makes the project lose sub-index 1; likewise with article 2. So when the second report is $p_{1,2}$, the plenary can accept one amendment, the other, both, or neither---as in the bottom row of Figure \ref{f:agendaUrg}. 
+\item If the committee concurs, then the \textbf{second report} is the outcome of the first reading. But this is an opportunity for committee members or by legislators external to the committee (with one-third plenary backing) to offer new amendments. The committee chair and the presiding officer can fail to admit these amendments too. For the sake of simplicity, the choice here concerns only article 2, although an array of possibilities exist---more re-definitions, more articles, fewer, among others. When amended, the second report is $p_2$ or $p_{12}$, depending on whether the outcome of the first reading was $p$ or $p_1$. 
+\item The \textbf{second reading} proceeds one article at a time (\emph{discusión particular}). Importantly, this excludes the subset of articles that were not amended/added/removed in previous steps. This subset (which may include every article if none were amended) is considered adopted with no plenary vote. Rejecting article 1's amendment makes the project lose sub-index 1; likewise with article 2. So when the second report is $p_{12}$, the plenary can accept one amendment, the other, both, or neither---as in the bottom row of Figure \ref{f:agendaUrg}. 
 \end{enumerate}
 
 We underline how the process shortens and becomes simpler when a proposal is fast-tracked. This is a key insight from \citet{sotoCongChile2015}: when the executive fast-tracks a bill, \emph{the bill takes a procedural shortcut}. As per the Lower Chamber's standing rules (arts.~188--9), fast-tracked bills receive no second committee report, and the first and second plenary readings (\emph{discusiones general y particular}) take place at once.\footnote{An additional caveat, which we do not elaborate, is that amendments rejected by the committee will only be released for plenary reading if thirty deputies,including at least three committee chairs, present a signed request.} 
