--- a/escrito/urge11.tex
+++ b/escrito/urge11.tex
@@ -219,11 +219,11 @@ This paper builds on the existing literature, but makes a different point. We cl
 
 \vp{Pienso que aquí habría que vincular esto a la literatura. How does this case speak to the fast-track authority literature? What can those scholars learn from reading this paper? part of our point is that urgencias in Chile are NOT fast-track authority, but rather, a form of imposing a closed rule and locking in policy preferences, no? so how does this relate back to the literature that we claim to speak to?}
 
-We find that the literature has largely ignored an important consequence of this rule: when bills are brought to the floor having been designated urgent, \emph{they cannot be modified}.\footnote{This is true since March of 2014. Before then, it was true only for one type of urgency, ``supreme urgency'' (\emph{suma urgencia}).} Currently, urgent bills are proposals that come to the floor with a closed rule: legislators have to vote them up or down, with no possibility to introduce amendments.  When qualified as urgent, the bill that emerges from committee is identical to the one passed by the floor. Urgency protects the agreements reached in committee as they cannot be undone later in the plenary session.
+We find that the literature has largely ignored an important consequence of this rule: when bills are brought to the floor having been designated urgent, \emph{they cannot be modified}.\footnote{This is true since March of 2014. Before then, it was true only for one type of urgency, ``supreme urgency'' (\emph{suma urgencia}).} Currently, urgent bills are proposals that come to the floor with a closed rule: legislators have to vote them up or down, with no possibility to introduce amendments.  When qualified as urgent, the bill that emerges from committee is identical to the one passed by the floor. Urgency protects the agreements reached in committee as they cannot be undone later in the plenary session. 
 
 The case of Chile attracts our attention because by means of her fast-track authority the president is able to decide whether a bill proceeds to the floor with a closed rule, or whether it will be open for amendments. This means that, unlike the U.S., where committee members negotiate with the leadership and the Rules Committee to receive closed rules towards floor consideration, in Chile committee members negotiate with the president to receive that label. In other words, in Chile the president takes on the role of the Rules Committee. 
 
-%This unique presidential role opens the door for multiple strategies both for the committee and the president regarding the conditions under which they will push for a bill to receive the urgency label. 
+%This unique presidential prerogative opens the door for multiple strategies both for the committee and the president regarding the conditions under which they will push for a bill to receive the urgency label. 
 
 %We claim that the poor signal given by bills designated urgent in Chile may bear relation to selection bias. Strategic presidents are likely to target bills that differ from the rest in important ways, so that the set of bills receiving urgent status is not random. Right censoring may also be an obstacle. A more fundamental problem is institutional indeterminacy. \citet{berrios.gamboa.fiscChile.2006} warn against overstating the Chilean urgency authority's importance, as non-compliance entails no penalty for Congress. %---unlike the Brazilian, Colombian, and Uruguayan variants.
 %This paper argues that the effects of urgency authority are procedural. Proposals the president declares urgent in Chile are considered under restrictive rules by the chamber's plenary. If the rationale is expediting the legislative process, one key consequence is to effectively shield committee reports from amendments by the plenary.
@@ -234,9 +234,10 @@ The paper proceeds as follows. Section 2 describes the urgency process in Chile 
 
 \vp{revisar este último párrafo cuando tengamos respuestas a mi comment anterior}
 
-\section{Urgent legislation and urgency degrees}
+\section{Fast-Track Legislation}
 
-As part of a literature that highlights the extraordinary legislative influence of presidents in Latin America, emphasis has been placed on the Chilean president's capacity to initiate exclusive legislation, to veto bills at their final stage, and to propose amendments at different times \citep{baldez.carey.1999,aleman.navia.UrgChi.2009}. Less attention has been devoted to the influence gained by the president when s/he can declare certain bills urgent and affect how congress deals with its agenda. We view this as stemming from urgency as a form of closed rule towards a bill's plenary consideration much more than, as the current literature sees it, a bill accelerator or a signal of presidential priority. Our argument here joins a growing literature on restrictive rules in legislatures worldwide.\footnote{See \citet{dion.huber.1996,doring.restrictiveRules.2003,huber.1996a,krehbielRestrictiveRules1997,heller.2001,weingast.1992,schickler.richRules1997,cox.mccubbins.1997,amorim.cox.mccubbins.2003,calvo.2014argBook,sin.2014,denhartog.2004phd}, among others.} 
+As part of a literature that highlights the extraordinary legislative influence of presidents in Latin America, emphasis has been placed on the Chilean president's exclusive proposal rights for certain bills, her capacity to veto bills totally and partially, and to propose amendments at different stages of the legislative process \citep{baldez.carey.1999,aleman.navia.UrgChi.2009}. Less attention has been devoted to the influence granted the president when she can declare certain bills urgent and by doing so, affect how congress deals with its agenda. We view this influence as stemming from the prerogative to qualify bills ``urgent'', which imposes a form of closed rule for floor consideration, more than, as the current literature sees it, a bill accelerator or a signal of presidential priority. Our argument here joins a growing literature on restrictive rules in legislatures worldwide.\footnote{See \citet{dion.huber.1996,doring.restrictiveRules.2003,huber.1996a,krehbielRestrictiveRules1997,heller.2001,weingast.1992,schickler.richRules1997,cox.mccubbins.1997,amorim.cox.mccubbins.2003,calvo.2014argBook,sin.2014,denhartog.2004phd}, among others.} 
+\vp{If this footnote is the relevant literature, it would not hurt to summarize findings in 2-3 paragraphs}
 
 \begin{table}
 \centering
@@ -249,7 +250,7 @@ Art 3. & one for students, one for teachers & ---                               
 \end{tabular}
 \end{table}
 
-A simple illustrative example of a bill and two amendments will ease exposition on how urgency works as a restrictive rule. In our example, we consider a proposal made by the executive that aims to offer student grants while also paying for teacher compensations. Three articles, summarized in Table \ref{T:example}, make it up. The first funds the program, appropriating a total \$200. The second splits the funds into equal parts. And the third allocates the parts. So, if approved, students and teachers would receive \$100 each. To add tension, assume a prior commitment of \$150 for teachers. To honor this, a member offers an amendment (\emph{indicación}) to article 1. If approved, this would beef up funds to \$300. One problem immediately arises: the Chilean executive has exclusive power to introduce legislation increasing spending (Const.\ art.\ 65). Since the bill itself has already been introduced, it takes some interpretation to determine if the amendment is in fact constitutional or not. Committee chairs decide on the admissibility of amendments on such grounds---a decision that the Lower Chamber's presiding officer can override.\footnote{The Constitutional Organic Law on Congress (arts.\ 24 and 25) leaves discretion to committee chairs and the presiding officer to declare amendments inadmissible. Non-germane amendments, or those that increase spending, or those falling in areas of exclusive executive initiative, are explicitly mentioned as inadmissible.} This is a form of \emph{ex-ante} veto: if unwilling to appropriate extra money, the committee chair or the presiding officer could simply declare the amendment inadmissible. In which case, the distributive route remains practicable: less for students, more for teachers. An amendment to article 2, such that teachers get three-fourths of the \$200 fund, would honor the commitment---at the students' expense. And by leaving spending untouched, it should also make it harder for the chair and presiding officer to argue against admitting the second amendment. 
+A simple example of a bill and two amendments illustrates how urgency qualification works as a restrictive rule. In our example, we consider a proposal made by the executive that aims to offer student grants while also paying for teacher compensations. Three articles, summarized in Table \ref{T:example}, provide different solutions. The first funds the program, appropriating \$200. The second splits the funds into equal parts. And the third allocates the parts. So, if approved, students and teachers would receive \$100 each. To add complexity, assume a prior commitment of \$150 for teachers. To honor this, a member offers an amendment (\emph{indicación}) to article 1. If approved, this would beef up funds to \$300. One problem immediately arises: the Chilean executive has exclusive power to introduce legislation increasing spending (Const.\ art.\ 65). Since the bill itself has already been introduced, it takes some interpretation to determine if the amendment is in fact constitutional or not. Committee chairs decide on the admissibility of amendments on such grounds---a decision that the Lower Chamber's presiding officer can override.\footnote{The Constitutional Organic Law on Congress (arts.\ 24 and 25) leaves discretion to committee chairs and the presiding officer to declare amendments inadmissible. Non-germane amendments, or those that increase spending, or those falling in areas of exclusive executive initiative, are explicitly mentioned as inadmissible.} This is a form of \emph{ex-ante} veto: if unwilling to appropriate extra money, the committee chair or the presiding officer could simply declare the amendment inadmissible. In which case, the distributive route remains practicable: less for students, more for teachers. An amendment to article 2, such that teachers get three-fourths of the \$200 fund, would honor the commitment---at the students' expense. And by leaving spending untouched, it should also make it harder for the chair and presiding officer to argue against admitting the second amendment. 
 
 \begin{sidewaysfigure}
   \centering
@@ -334,20 +335,20 @@ A simple illustrative example of a bill and two amendments will ease exposition 
     \end{tikzpicture}  \\
 \end{sidewaysfigure}
 
-We use the example to stylize the evolution of legislative proposals, from introduction to passage, in order to illustrate how urgencies affect bills. We introduce some notation. The three-article project is $p$, and $q$ the status quo (where students and teachers get \$0 from this particular subsidy). Sub-indexes distinguish versions of $p$ with articles amended: $p_1$ has article 1 amended, $p_2$ has article 2 amended, and $p_{12}$ has both articles amended. Negotiation proceeds in four steps, schematized in Figure \ref{f:agendaUrg} as per \citet[]{schwartz.2008}.\footnote{See the Cámara's standing rules (\emph{Reglamento}), especially arts.\ 118--189.} 
+We use the example to stylize the evolution of legislative proposals from introduction to passage, in order to illustrate how urgencies affect bills. We introduce some notation. The three-article project is $p$, and $q$ is the status quo (where students and teachers get \$0 from this particular subsidy). Sub-indexes distinguish versions of $p$ with articles amended: $p_1$ has article 1 amended, $p_2$ has article 2 amended, and $p_{12}$ has both articles amended. Negotiation proceeds in four steps, schematized in Figure \ref{f:agendaUrg} as per \citet[]{schwartz.2008}.\footnote{See the Cámara's standing rules (\emph{Reglamento}), especially arts.\ 118--189.} 
 
 \begin{enumerate}
-\item The question of amendment $p_1$'s admissibility into the \textbf{first report} starts it all. The choice is by the chamber's presiding officer, who has final authority to overturn the committee chair's prior decision. Admitting $p_1$ gives way to a course of play that substantially complicates down the tree. 
-\item The bill's \textbf{first plenary reading} follows (rules call it \emph{discusión general}). The question here is whether the full project should be admitted for consideration or not. If not, the legislative process ends and the status quo prevails: $p$ v. $q$. Next, a vote to also admit the amendment (if any) follows. Project $p_1$ (amendment admitted) or $p$ (not) is immediately referred back to committee for a second report. 
-\item If the committee concurs, then the \textbf{second report} is the outcome of the first reading. But this is an opportunity to offer new amendments, by committee members or by legislators external to the committee (with one-third plenary backing). The committee chair and the presiding officer can fail to admit these amendments too. For the sake of simplicity, the choice here is just on article 2, but there is a world of possibilities---more re-definitions, more articles, or fewer. When amended, the second report is $p_2$ or $p_{12}$, depending on the first reading being $p$ or $p_1$, respectively. 
-\item The \textbf{second reading} proceeds one article at a time (\emph{discusión particular}). Importantly, this excludes the subset of articles that were not amended/added/removed in previous steps. This subset (which may include every article if none were amended) is considered adopted with no plenary vote. Rejecting article 1's amendment makes the project lose sub-index 1; likewise with article 2. So when $p_{12}$ is the second report, the plenary can accept one amendment, the other, both, or neither---as in the bottom row of Figure \ref{f:agendaUrg}. 
+\item The question of amendment $p_1$'s admissibility into the \textbf{first report} starts it all. The choice is by the chamber's presiding officer, who has final authority to overturn the committee chair's decision. Admitting $p_1$ gives way to a course of play that substantially complicates down the tree. 
+\item The bill's \textbf{first plenary reading} follows (\emph{discusión general}). The question here is whether the full proposal should be admitted for consideration or not. If not, the legislative process ends and the status quo prevails: $p$ v. $q$. Next, a vote to admit any amendments that have been proposed follows. Project $p_1$ (amendment admitted) or $p$ (not) is immediately referred back to committee for a second report. 
+\item If the committee concurs, then the \textbf{second report} is the outcome of the first reading. But this is an opportunity for committee members or by legislators external to the committee (with one-third plenary backing) to offer new amendments. The committee chair and the presiding officer can fail to admit these amendments too. For the sake of simplicity, the choice here concerns only article 2, although an array of possibilities exist---more re-definitions, more articles, fewer, among others. When amended, the second report is $p_2$ or $p_{12}$, depending on whether the outcome of the first reading was $p$ or $p_1$. 
+\item The \textbf{second reading} proceeds one article at a time (\emph{discusión particular}). Importantly, this excludes the subset of articles that were not amended/added/removed in previous steps. This subset (which may include every article if none were amended) is considered adopted with no plenary vote. Rejecting article 1's amendment makes the project lose sub-index 1; likewise with article 2. So when the second report is $p_{12}$, the plenary can accept one amendment, the other, both, or neither---as in the bottom row of Figure \ref{f:agendaUrg}. 
 \end{enumerate}
 
-We underline how the process shortens and becomes simpler when the proposal is urgent. This is a key intuition from \citet{sotoCongChile2015}: when the executive issues an urgency message, \emph{the bill takes a procedural shortcut}. As per the Lower Chamber's standing rules (arts.~188--9), urgent bills receive no second committee report, and the first and second plenary readings (\emph{discusiones general y particular}) take place at once.\footnote{An additional caveat, which we do not elaborate, is that amendments rejected by the committee will only be admitted for plenary reading if signed by thirty deputies, including at least three committee chairs.} 
+We underline how the process shortens and becomes simpler when a proposal is fast-tracked. This is a key insight from \citet{sotoCongChile2015}: when the executive fast-tracks a bill, \emph{the bill takes a procedural shortcut}. As per the Lower Chamber's standing rules (arts.~188--9), fast-tracked bills receive no second committee report, and the first and second plenary readings (\emph{discusiones general y particular}) take place at once.\footnote{An additional caveat, which we do not elaborate, is that amendments rejected by the committee will only be released for plenary reading if thirty deputies,including at least three committee chairs, present a signed request.} 
 
-Urgency authority therefore equips the executive with the ability to apply a restrictive rule towards plenary consideration. The restriction consists of precluding the second round of amendments. Figure \ref{f:agendaUrg} portrays this as a break mid-way in the consideration process. With urgent consideration, when the presiding officer admits $p_1$ the plenary's choice set includes $q$, $p$, and $p_1$ only. At its most restrictive---when the presiding officer removes $p_1$ from the menu---the plenary is presented with a take-it-or-leave-it urgent proposal $p$.
+Urgency authority therefore equips the executive with the ability to apply a restrictive rule on plenary consideration. The restriction consists of precluding the second round of amendments. Figure \ref{f:agendaUrg} portrays this as a break mid-way in the consideration process. With urgent consideration, when the presiding officer admits $p_1$ the plenary's choice set includes $q$, $p$, and $p_1$ only. At its most restrictive---when the presiding officer removes $p_1$ from the menu---the plenary is presented with a take-it-or-leave-it urgent proposal $p$.
 
-This is to say, therefore, that the toolbox of formidable legislative powers of the Chilean president includes the ability to impose restrictive floor consideration rules. In Chile, the president plays the role played by the powerful Rules Committee in the U.S.\ House. In the next section we we analyze the conditions under which  Chilean presidents choose different types of rules in the legislative process. 
+This is to say, therefore, that the toolbox of formidable legislative powers of the Chilean president includes the ability to impose restrictive floor consideration rules. In Chile, the president plays the role played by the powerful Rules Committee in the U.S.\ House. In the next section we analyze the conditions under which  Chilean presidents choose different types of rules in the legislative process. 
 
 %% Un perfil de preferencia para ilustrar podria ser el siguiente:
 %% \begin{itemize}
@@ -393,11 +394,9 @@ This is to say, therefore, that the toolbox of formidable legislative powers of 
     \end{tikzpicture}
 \end{figure}
 
-We stylize the Chilean urgency authority as a game of restrictive procedures inspired by \citet{dion.huber.1996}, with the president in the role of the Rules Committee. Figure \ref{F:game} portrays the game's extended form.
+We stylize the Chilean urgency authority as a game of restrictive procedures inspired by \citet{dion.huber.1996}, with the president in the role of the Rules Committee. Figure \ref{F:game} portrays the game's extended form. The main features of this game are as follows. Unless there is unanimous support to suspend the chamber's rules, every proposal requires a committee report prior to floor consideration (Organic Law, art.~21). HERE HERE HERE HERE The committee with jurisdiction over a given proposal starts the game, choosing whether or not to report the bill to the floor. No explicit discharge procedure exists in Chile. This confers gate-keeping power to committees over policy in their jurisdiction: when the committee withholds a report, the game ends with policy at the status quo $q$. Chilean committees are no different in this respect from those in the U.S.\ Congress. If a report is produced, the committee can approve the proposal in whole or in part, amend it, make additions, or reject it (Cámara standing rule 287.8). We interpret this as (positive) agenda power to locate the proposal in policy space: $x_C \in [0,1]$. The president moves next. 
 
-The main features of this game are as follows. Unless there is unanimous support to suspend the chamber's rules, every proposal requires a committee report prior to floor consideration (Organic Law, art.~21). The committee with jurisdiction over a given proposal starts the game, choosing whether or not to report the bill to the floor. No explicit discharge procedure exists in Chile. This confers gate-keeping power to committees over policy in their jurisdiction: when the committee withholds a report, the game ends with policy at the status quo $q$. Chilean committees are no different in this respect from those in the U.S.\ Congress. If a report is produced, the committee can approve the proposal in whole or in part, amend it, make additions, or reject it (Cámara standing rule 287.8). We interpret this as (positive) agenda power to locate the proposal in policy space: $x_C \in [0,1]$. The president moves next. 
-
-The president's choice set has three alternatives: let the bill proceed under standard floor consideration; declare it urgent; or issue a veto. Standard consideration ends the game with policy at $x_F$. By navigating the plenary session with an open rule, amendments reshape the bill to the floor's liking. As in \citet{shepsle.1979}, we take $x_F$ to be the floor median's ideal point, corresponding to a game of full plenary influence. The next alternative, urgency, invokes the restrictive consideration rule and presents the floor with a take-it-or-leave-it offer. Unable to amend the proposal, the floor, which moves after the bill was marked urgent, must choose between the reported bill $x_C$ or the status quo, as in \citet{romer.rosenthal.1978}. The final presidential alternative, the veto, may end the game at the status quo---the formal equivalent of the rule denial in Dion and Huber's procedural stage.
+The president's choice set has three alternatives: let the bill proceed under standard floor consideration; declare it urgent; or issue a veto. Standard consideration ends the game with policy at $x_F$. By navigating the plenary session with an open rule, amendments reshape the bill to the floor's liking. As in \citet{shepsle.1979}, we take $x_F$ to be the floor median's ideal point, corresponding to a game of full plenary influence. The next alternative, urgency, invokes the restrictive consideration rule and presents the floor with a take-it-or-leave-it offer. Unable to amend the proposal, the floor, which moves after the bill was marked urgent, must choose between the reported bill $x_C$ or the status quo, as in \citep{romer.rosenthal.1978}. The final presidential alternative, the veto, may end the game at the status quo---the formal equivalent of the rule denial in Dion and Huber's procedural stage.
 
 \vp{But this [open rule] returns the bill to the committee, no?}
 \emm{It does, but only id amendments were in fact introduced. Model totally ignores this. Simplistic? Justifiable? May need some elaboration.}
